--- a/config/config.yml
+++ b/config/config.yml
@@ -6,7 +6,8 @@ CHAINS:
       keys:
         - "7MM6JYY49WZBXSYFDPYQ3V7V3EMZWE4KJK"
     nodes:
-      - api: "https://eth-mainnet.alchemyapi.io/v2/AgKT8OzbNsYnul856tenwnsnL3Pm7WRB"
+      - api: "https://cloudflare-eth.com"
+#      - api: "https://eth-mainnet.alchemyapi.io/v2/AgKT8OzbNsYnul856tenwnsnL3Pm7WRB"
 
   - name: "Binance Smart Chain"
     tag: "BSC"
